--- a/src/app/Screens/home-page/home-page.component.css
+++ b/src/app/Screens/home-page/home-page.component.css
@@ -22,21 +22,6 @@
   border: 1px solid #64ffda;
   cursor: pointer;
 }
-@media (min-width: 768px) {
-  .container {
-    width: 100%;
-  }
-}
-@media (min-width: 992px) {
-  .container {
-    width: 100%;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-    width: 100%;
-  }
-}
 .page-title {
   margin-top: 1.5rem;
   color: #ccd6f6;
@@ -69,4 +54,55 @@
 .spinnerClass {
   display: flex;
   justify-content: center;
+}
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
+  .nav {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background-color: #0a192f;
+    display: grid;
+    justify-content: center;
+    box-shadow: 2px 2px 2px 0px rgba(136, 146, 176, 1);
+  }
+  .page-title {
+    margin-top: 1.5rem;
+    color: #ccd6f6;
+    font-size: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+  .input-style {
+    border-radius: 4px;
+    padding: 10px;
+    margin: 10px;
+    width: 150px;
+    border: 2px groove #64ffda;
+    background-color: #0a192f;
+    color: #64ffda;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    width: 100%;
+  }
+
+  .input-style {
+    border-radius: 4px;
+    padding: 10px;
+    margin: 10px;
+    width: 150px;
+    border: 2px groove #64ffda;
+    background-color: #0a192f;
+    color: #64ffda;
+  }
+}
+@media (max-width: 1200px) {
+  .container {
+    width: 100%;
+  }
 }
