--- a/src/app/Screens/home-page/user-info/user-info.component.css
+++ b/src/app/Screens/home-page/user-info/user-info.component.css
@@ -17,3 +17,26 @@ h1,
 h4 {
   color: #ccd6f6;
 }
+
+@media (max-width: 768px) {
+  .profile-img {
+    width: 10px;
+    height: 150px;
+    border-radius: 50%;
+    margin: 2rem;
+  }
+}
+@media (max-width: 992px) {
+  .profile-img {
+    width: 180px;
+    border-radius: 50%;
+    margin: 2rem;
+  }
+}
+@media (max-width: 1200px) {
+  .profile-img {
+    width: 200px;
+    border-radius: 50%;
+    margin: 2rem;
+  }
+}
