--- a/src/app/Screens/home-page/user-repo/user-repo.component.css
+++ b/src/app/Screens/home-page/user-repo/user-repo.component.css
@@ -42,3 +42,59 @@
 .pagination-next {
   color: red;
 }
+
+.text-right {
+  display: flex;
+  justify-content: center;
+  color: white !important;
+}
+
+.ngx-pagination {
+  color: white !important;
+}
+/* 
+.ngx-pagination a,
+.ngx-pagination button {
+  color: white !important;
+} */
+
+.text-right ::ng-deep .ngx-pagination a {
+  color: white !important;
+}
+
+@media (max-width: 768px) {
+  .repo-card {
+    width: 85% !important;
+    padding: 24px;
+    margin: 20px;
+    border-radius: 10px;
+    border: 1px groove #64ffda;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+@media (max-width: 992px) {
+  .repo-card {
+    width: 55%;
+    padding: 24px;
+    margin: 20px;
+    border-radius: 10px;
+    border: 1px groove #64ffda;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+@media (max-width: 1200px) {
+  .repo-card {
+    width: 35%;
+    padding: 24px;
+    margin: 20px;
+    border-radius: 10px;
+    border: 1px groove #64ffda;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
